# ordinals-pallet

./: Cargo.toml  README.md
src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
