[package]
name = "pallet-ordinals"
description = "Inscribe Ordinals on Substrate"
version = "1.0.0"
publish = true
authors = ["Hoa Le <https://github.com/hoale58-vl>"]
edition = "2021"
repository = "https://github.com/hoale58-vl/ordinals-pallet"
license = "MIT-0"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.10.0", default-features = false, features = [
	"derive",
] }
frame-benchmarking = { version = "33.0.0", default-features = false, optional = true }
frame-support = { version = "33.0.0", default-features = false }
frame-system = { version = "33.0.0", default-features = false }
sp-runtime = { version = "33.0.0", default-features = false }
sp-std = { version = "11.0.0-dev.1", default-features = false }

[dev-dependencies]
sp-core = { version = "24.0.0-dev.1" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
	"scale-info/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
